# dwm

./: .gitignore  .vimrc  Cargo.toml  LICENSE  Makefile  README  config.def.h  config.h  config.mk  console.c  console.h  dwm-rs.h  dwm.c  pointerapp.c  pointerapp.h  replace  rustline.pl  shape_test.c  stream.h  stream.rs  test_streams.c  touch_test.c  xi.c  xi.h
session/: dwm-session  dwm.desktop
src/: console.rs  dwm.rs  lib.rs  stream.rs
